--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
+        uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: Cache cargo registry and git
         uses: actions/cache@v4
@@ -44,10 +41,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
+        uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: Build release
         run: cargo build --release
