--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", features = ["clock"] }
 shellexpand = "2.1"
+
+[dev-dependencies]
+tempfile = "3.8"
